--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -488,6 +488,12 @@ backend {
   }
 }
 
+backend.providers.Papiv2.config {
+  memory-retry {
+    error-keys = ["OutOfMemoryError", "Killed"]
+  }
+}
+
 services {
   KeyValue {
     class = "cromwell.services.keyvalue.impl.SqlKeyValueServiceActor"
