--- a/.travis.yml
+++ b/.travis.yml
@@ -56,14 +56,12 @@ env:
     - >-
       BUILD_TYPE=centaurHoricromtalEngineUpgradePapiV2alpha1
       BUILD_MARIADB=10.3
-    # This is not currently running any tests, see BT-81.
-    # - >-
-    #  BUILD_TYPE=centaurPapiUpgradePapiV2alpha1
-    #  BUILD_MYSQL=5.7
-    # This is not currently running any tests, see BT-81.
-    # - >-
-    #  BUILD_TYPE=centaurPapiUpgradeNewWorkflowsPapiV2alpha1
-    #  BUILD_MYSQL=5.7
+    - >-
+      BUILD_TYPE=centaurPapiUpgradePapiV2alpha1
+      BUILD_MYSQL=5.7
+    - >-
+      BUILD_TYPE=centaurPapiUpgradeNewWorkflowsPapiV2alpha1
+      BUILD_MYSQL=5.7
     - >-
       BUILD_TYPE=centaurLocal
       BUILD_MYSQL=5.7
